--- a/allukas_react/package.json
+++ b/allukas_react/package.json
@@ -13,6 +13,7 @@
     "defaults"
   ],
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.4",
     "@tanstack/react-query": "^5.36.1",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/uuid": "^9.0.8",
