--- a/allukas_react/package.json
+++ b/allukas_react/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.4.0",
     "@reduxjs/toolkit": "^2.2.4",
     "@tanstack/react-query": "^5.36.1",
+    "@tanstack/react-query-devtools": "^5.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
